# tree-sitter-owl-ms

./: .gitignore  .prettierignore  Cargo.toml  binding.gyp  bnf.md  grammar.js  grammar.md  package-lock.json  package.json  readme.md  shell.nix  tree-sitter.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: folds.scm  highlights.scm  indents.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: statements.txt
