[package]
name = "tree-sitter-owl-ms"
description = "owl-ms grammar for the tree-sitter parsing library"
version = "0.0.3"
keywords = ["incremental", "parsing", "owl-ms"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-owl2-manchester-syntax"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
